[package]
name = "vesting"
version = "0.1.0"
description = "Token Vesting"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vesting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = { version = "0.29.0", features = ["token", "metadata"]}
solana-program = "1.17.28"
mpl-token-metadata = "4.1.2"
